Edit Concept Screen various 508 fixes.  Contrast on assoc value labels (Mod css)  Labels, header and titles added to text not being read by JAWS.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -831,7 +831,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
 }
 .concept-expression-footnote{
     font-size: xx-small;
-    background-color: rgb(245, 245, 245);
+    background-color: #0a3e6b;
 }
 
 // Concept Editor Viewer Styles
@@ -890,7 +890,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
     width: 300px;
 }
 .komet-concept-edit .komet-concept-section-panel-details .komet-indent-block{
-    background-color: #e6e6e6;
+    background-color: #f9f9f9;
 }
 .komet-concept-edit-row .komet-indent-block .komet-concept-section-title{
     margin-bottom: 5px;
@@ -911,7 +911,7 @@ td.komet-concept-table-nested-indicator.komet-concept-table-nested-indicator-ope
     padding: 6px 2px;
     height: 26px;
     font-size: smaller;
-    background-color: rgba(66, 139, 202, 1);
+    background-color: #13426b;
     color: white;
     overflow: hidden;
 }
